# bound

./: .clang-tidy  .gitignore  CMakeLists.txt  README.md  continue.txt
.github/workflows/: ci.yml
cmake/: amalgamate.cmake
docs/: accuracy.md  arithmetic.md  conversions.md  determinism.md  diagnostics.md  fixed-point.md  freestanding.md  internals.md  math.md  performance.md  policies.md  resources.md  roadmap.md  single-header.md  storage.md  tutorial.md
examples/: algorithms.cpp  angles.cpp  array_index.cpp  audio_mixer.cpp  audio_sample.cpp  calendar.cpp  casts.cpp  clock.cpp  color.cpp  decibels.cpp  division.cpp  envelope.cpp  errors.cpp  fixed_point.cpp  formats.cpp  game_hp.cpp  geometry.cpp  histogram.cpp  id_pool.cpp  integer_division.cpp  jitter_buffer.cpp  money.cpp  navigation.cpp  oscillator.cpp  percentage.cpp  pid_controller.cpp  polar.cpp  q_formats.cpp  rifle.cpp  sensor_fusion.cpp  sequence_number.cpp  signed.cpp  soft_clip.cpp  storage_flags.cpp  temperature.cpp  torus_map.cpp
include/bound/: addition.hpp  arithmetic.hpp  assignment.hpp  bound.hpp  casts.hpp  cmath.hpp  cmath_double.hpp  cmath_float.hpp  common.hpp  concept.hpp  construction.hpp  core.hpp  debug.hpp  division.hpp  format.hpp  formats.hpp  formatter.hpp  generic.hpp  grid.hpp  interval.hpp  io.hpp  lift.hpp  math.hpp  multiplication.hpp  numeric_limits.hpp  overflow.hpp  policy.hpp  policy_flag.hpp  predicates.hpp  print.hpp  range.hpp  rational.hpp  waiver.hpp
include/bound/detail/: addition.hpp  assignment.hpp  debug.hpp  division.hpp  fixed_string.hpp  multiplication.hpp  overflow.hpp  rational.hpp  rep.hpp
include/bound/policy/: detection.hpp  mitigation.hpp  promotion.hpp  waiver.hpp
include/bound/utility/: grid.hpp  interval.hpp  math.hpp  print.hpp  rational.hpp
include/slim/: expected.hpp  optional.hpp
single_include/bound/: bound.hpp
tests/: accuracy.cpp  algo.cpp  bench.cpp  check_codegen.sh  check_perf.py  fuzz.cpp  perf_baseline.json  perf_codegen.cpp  perf_workload.cpp  single_header_freestanding_smoke.cpp  single_header_nofp_smoke.cpp  single_header_smoke.cpp  test.cpp  test_algo.cpp  test_bound_arithmetic.cpp  test_bound_assign.cpp  test_bound_to.cpp  test_casts.cpp  test_cmath.cpp  test_cmath_double.cpp  test_common_type.cpp  test_compound_assign.cpp  test_constant.cpp  test_constexpr.cpp  test_coverage_corners.cpp  test_cross_grid.cpp  test_determinism.cpp  test_div_round.cpp  test_error_code_ctor.cpp  test_error_handler.cpp  test_error_vocabulary.cpp  test_format.cpp  test_formats.cpp  test_grid.cpp  test_grid_try_make.cpp  test_interval.cpp  test_lift.cpp  test_literals.cpp  test_math.cpp  test_math_engines.cpp  (+15 more)
tests/fail/: CMakeLists.txt  control_compiles.cpp  disjoint_interval_assign.cpp  exclusive_policies.cpp  math_without_snap.cpp  modulo_non_integer.cpp  notch_mismatch_assign.cpp  scalar_operand.cpp
tests/nofp_poison/: cmath
